@@ -8,6 +8,7 @@ import com.buschmais.jqassistant.core.analysis.api.AnalyzerContext;
 import com.buschmais.jqassistant.core.analysis.api.RuleInterpreterPlugin;
 import com.buschmais.jqassistant.core.analysis.api.configuration.Analyze;
 import com.buschmais.jqassistant.core.report.api.ReportPlugin;
+import com.buschmais.jqassistant.core.report.api.model.Result;
 import com.buschmais.jqassistant.core.rule.api.executor.RuleSetExecutor;
 import com.buschmais.jqassistant.core.rule.api.model.RuleException;
 import com.buschmais.jqassistant.core.rule.api.model.RuleSelection;
@@ -38,10 +39,10 @@ public class AnalyzerImpl implements Analyzer {
      * @param ruleInterpreterPlugins
      *     The {@link RuleInterpreterPlugin}s.
      * @param reportPlugin
-     *     The report wrtier.
+     *     The report writer.
      */
     public AnalyzerImpl(Analyze configuration, ClassLoader classLoader, Store store, Map<String, Collection<RuleInterpreterPlugin>> ruleInterpreterPlugins,
-        ReportPlugin reportPlugin) {
+        ReportPlugin reportPlugin) throws RuleException {
         this.configuration = configuration;
         this.analyzerContext = new AnalyzerContextImpl(configuration, classLoader, store);
         this.ruleInterpreterPlugins = ruleInterpreterPlugins;
@@ -56,7 +57,7 @@ public class AnalyzerImpl implements Analyzer {
     @Override
     public void execute(RuleSet ruleSet, RuleSelection ruleSelection) throws RuleException {
         AnalyzerRuleVisitor visitor = new AnalyzerRuleVisitor(configuration, analyzerContext, ruleInterpreterPlugins, reportPlugin);
-        RuleSetExecutor executor = new RuleSetExecutor(visitor, configuration.rule());
+        RuleSetExecutor<Result.Status> executor = new RuleSetExecutor<>(visitor, configuration.rule());
         executor.execute(ruleSet, ruleSelection);
     }
 }
